fixed error with low resolution on mobilephones

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -28,6 +28,7 @@
     .heading{
         width: 100%;
         height: 58vh;
+        min-height: 425px;
         background-position: center;
     }
 
@@ -59,7 +60,7 @@
 
     .heading-bottons_calculate{
         width: 95.6%;
-        margin-top: 6%;
+        margin-top: 5%;
     }
 
     .heading-bottons_transparent{
